added changes to render using spherical harmonics

--- a/confs/real_rene.conf
+++ b/confs/real_rene.conf
@@ -25,7 +25,7 @@ train {
     use_white_bkgd = False
 
     save_freq = 10000
-    val_freq = 2000
+    val_freq = 1500
     val_mesh_freq = 5000
     report_freq = 100
 
@@ -52,11 +52,11 @@ model {
     }
 
     sdf_network {
-        d_out = 266
+        d_out = 17
         d_in = 3
         d_hidden = 256
-        n_layers = 8
-        skip_in = [4]
+        n_layers = 6
+        skip_in = [3]
         multires = 6
         bias = 0.5
         scale = 1.0
@@ -69,15 +69,13 @@ model {
     }
 
     SHshader {
-        d_in = 3 ,
-        d_in_view = 3,
-        d_in_light = 3,
-        d_feature = 256,
-        W = 256,
-        multires = 10,
-        multires_view = 4,
-        output_ch = 3,
-        skips=[4],
+        d_in = 15, # point, normal, view_dir, ref_dir, illum_dir
+        d_feature = 16,
+        d_out = 75, # 4 spherical harmonics (n+1)^2 -- 3 color channels
+        d_hidden = 128,
+        # W = 256,
+        n_layers = 4,
+        multires = 8,
     }
     physical_rendering_network {
         
